社員情報にemailと入社年月日のフォームを作成した

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -27,6 +27,17 @@
     </div>
 
     <div class="form_group">
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+
+    <div class="form_group">
+      <%= f.label :date_of_joining %>
+      <%= f.text_field :date_of_joining %>
+      <span>yyyy-mm-dd の形式で入力してください。</span>
+    </div>
+
+    <div class="form_group">
       <%= f.label :password %>
       <%= f.password_field :password %>
     </div>
