--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,10 +16,12 @@
     <tbody>
     <% @articles.each do |article| %>
       <tr class="article">
-        <%= link_to article.title, article_path(article) %>
-        <% if article.auther == current_user.id %>
-          <th class="btn_th"><%= link_to '編集', edit_article_path(article), class: 'btn' %></th>
-          <th class="btn_th"><%= link_to '削除', article, method: :delete, data: { confirm: "記事「#{article.title}」を削除します。よろしいですか？" }, class: 'btn' %></th>
+        <% if article.deleted_at.nil?%>
+          <%= link_to article.title, article_path(article) %>
+          <% if article.auther == current_user.id %>
+            <th class="btn_th"><%= link_to '編集', edit_article_path(article), class: 'btn' %></th>
+            <th class="btn_th"><%= link_to '削除', article, method: :delete, data: { confirm: "記事「#{article.title}」を削除します。よろしいですか？" }, class: 'btn' %></th>
+          <% end %>
         <% end %>
       </tr>
     <% end %>
