--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,7 @@
     <thead>
       <tr>
         <th class="title">タイトル</th>
+        <th><%= sort_order "created_at", "公開日" %></th>
       </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
       <tr class="article">
         <% if article.deleted_at.nil?%>
           <%= link_to article.title, article_path(article) %>
+          <%= article.created_at %>
           <% if article.auther == current_user.id %>
             <th class="btn_th"><%= link_to '編集', edit_article_path(article), class: 'btn' %></th>
             <th class="btn_th"><%= link_to '削除', article, method: :delete, data: { confirm: "記事「#{article.title}」を削除します。よろしいですか？" }, class: 'btn' %></th>
