ナビバーのレイアウトを変更

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,28 @@
-<%= javascript_pack_tag "header.js" %>
-<div id='menu'>
-  <ul class='left_menu'>
-    <li><%= link_to 'お知らせ', articles_path %></li>
-    <li><%= link_to '社員紹介', employees_path %></li>
-  </ul>
-  <ul class='right_menu'>
-    <li>
-      <button class='dropdown__btn' id='dropdown__btn'>
-        <%= "#{@current_user.last_name} #{@current_user.first_name}" %>
-      </button>
-    </li>
-  </ul>
-</div>
-<div id='dropdown_menu'>
-  <div class='right_menu'>
-    <div class='dropdown_items'>
-      <ul>
-        <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container mt-2">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <p class="navbar-brand">News and Employee Introduction</p>
+        </li>
+        <li class="nav-item"><%= link_to 'お知らせ', articles_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to '社員紹介', employees_path, class: "nav-link" %></li>
+
+        <div class="d-flex">
+          <li class="nav-item dropdown text-right">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= "#{@current_user.last_name} #{@current_user.first_name}" %>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><%= link_to 'ログアウト', logout_path, method: :delete, class: "dropdown-item" %></li>
+            </ul>
+          </li>
+        </div>
+        
       </ul>
     </div>
   </div>
-</div>
+</nav>
