flashをapplication.html.erbに統合

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <div class='container'>
       <% if flash.notice.present? %>
-        <p><%= flash.notice %></p>
+        <p bg-info text-light><%= flash.notice %></p>
       <% end %>
       <%= yield %>
     </div>
