--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -31,7 +31,7 @@
           </tr>
         <% end %>
       </tr>
-      <%= paginate(@articles) %>
+      <%= paginate @articles, theme: 'bootstrap-5' %>
     </tbody>
   </table>
 
