--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -37,7 +37,7 @@
           <% end %>
         </tr>
       <% end %>
-      <%= paginate(@employees) %>
+      <%= paginate @employees, theme: 'bootstrap-5' %>
     </tbody>
   </table>
 </div>
